NodejsHandson/Nodejs1/nodeHOL1.txt
1)PS C:\Users\prati> node -v
v14.15.1
PS C:\Users\prati> npm list
C:\Users\prati
`-- (empty)

PS C:\Users\prati> npm --v
6.14.8
2)> console.log("Hello NodeJs")
Hello NodeJs
undefined
> 3+3
6
> 4*4
16
> 6-6
0
> if(3==3){
... ;
... }
undefined
> var x=0;
undefined
> do
... {zlib
... consol;
... }
... ,
,
^

Uncaught SyntaxError: Unexpected token ','
> if(3=3)
if(3=3)
   ^

Uncaught SyntaxError: Invalid left-hand side in assignment
> if(3=3){
if(3=3){
   ^

Uncaught SyntaxError: Invalid left-hand side in assignment
> if(3==3){
... console.log("printed");
... }
printed
undefined
> .help
.break    Sometimes you get stuck, this gets you out
.clear    Alias for .break
.editor   Enter editor mode
.exit     Exit the REPL
.help     Print this help message
.load     Load JS from a file into the REPL session
.save     Save all evaluated commands in this REPL session to a file
Uncaught SyntaxError: Unexpected token 'function'
> .editor
// Entering editor mode (Ctrl+D to finish, Ctrl+C to cancel)
const name=(myname)=>{console.log(`Hello Vijay Welcome to BlazeclanHave a nice day!!!`);}
name(`thapa`)